clusters/managed/default/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        milano.app: *app
        milano.level: managed
    spec:
      serviceAccountName: *app
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      hostAliases:
        - ip: "10.0.0.10"
          hostnames:
            - proxmox.trusted.nirmalhk7.com
        - ip: "172.16.0.101"
          hostnames:
            - robot.trusted.nirmalhk7.com
            - sentinel.trusted.nirmalhk7.com
      containers:
        - name: *app
          image: "ghcr.io/gethomepage/homepage:v2.4.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /app/config/custom.js
              name: homepage-config
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: homepage-config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: homepage-config
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/proxmox.yaml
              name: homepage-config
              subPath: proxmox.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/public/images/homepage
              name: homepage-wallpapers
              readOnly: true
            - mountPath: /app/public/icons
              name: homepage-logo
              readOnly: true
            - mountPath: /app/config/logs
              name: logs
            - mountPath: /app/secret
              name: homepage-secret
              readOnly: true
      volumes:
        - name: homepage-config
          configMap:
            name: *app
        - name: homepage-wallpapers
          configMap:
            name: homepage-wallpapers
        - name: homepage-logo
          configMap:
            name: homepage-logo
        - name: logs
          emptyDir: {}
        - name: homepage-secret
          secret:
            secretName: homepage-secret
