clusters/managed/default/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homepage
