clusters/managed/default/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app homepage-ingress
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`home.trusted.nirmalhk7.com`) || Host(`homepage.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: homepage
          port: 3000
